--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
